src/css/custom.css
/* keep the navbar from disappearing when scrolling */
.navbar--fixed-top {
  position: fixed;
  width: 100%;
}

/* give some sace for the breadcrumbs */
.padding-top--md, .padding-vert--md {
    padding-top: 4.5rem!important;
}

/* Docsearch from Algolia */
[data-theme='light'] .DocSearch mark {
  --docsearch-highlight-color: black;
}

[data-theme='dark'] .DocSearch mark {
  --docsearch-highlight-color: white;
}

[data-theme='dark'] .DocSearch-Hit-source {
  color: white;
}

/* right hand table of contents */
.table-of-contents__link {
  color: var(--ifm-toc-link-color);
}
.table-of-contents__link--active {
  color: var(--ifm-toc-link-color--active);
}

/* Remove the filter, which was changing the
 * color of the > in dark mode */
.menu__caret:before {
    filter: none !important;
}

.navbar__logo img {
  height: 2rem;
  width: 2rem;
}

/* override the normal white background color
 * and remove the drop shadow filter for img
 * when it is inside  of a .navbar__logo
 * or in the columns on the doc homepage */
.navbar__logo img {
  filter: none;
  background-color: transparent;
}

/* this is for the docs homepage, no filter
 * and add a background color. set the width
 * on the images in the row. */
.col--4 img {
  filter: none;
  background-color: white;
  max-width: 200px;
}

.theme-doc-sidebar-container img {
  filter: none;
  background-color: transparent;
}

.theme-doc-sidebar-container {
  background-color: #2F2C3A;
}
/* main body of the doc page */
.main-wrapper {
  background-color: var(--clickhouse-main-background);
}


 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
  font-family: Inter,sans-serif ;
 }

.text--truncate {
  font-family: Inter,sans-serif;
  font-size: 24px;
  font-weight: 500;
}

 /* hero settings */
.hero__title {
  font-size: 50px;
  font-weight: 700;
  font-family: Inter, -apple-system, "system-ui", "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
}
.hero__subtitle {
  font-size: 1rem;
}
.hero--primary {
  /*background-image: url('../../static/img/image_mountain.png'); */
  background-color: transparent;
  background-position: center center;
  background-size: cover;
  opacity: 1;
  transition: opacity 1.2s,transform 1.6s;
  transition-timing-function: cubic-bezier(0.215,0.61,0.355,1);
}
.hero {
  --ifm-button-font-weight: 700;
}

.adopters-table {
  width: 1150px;
}

/* the buttons on the hompage stack on cell phones - this seems to fix it */
.buttons_src-pages-docs-index-module {
  display: flow-root !important;
}
.buttons_src-pages-index-module {
  display: block !important;
}
.buttons_s0t3 {
  display: flow-root !important;
}

body {
  font-family: Inter,sans-serif ;
}

html {
  font-size: 16px;
}

code {
  font-weight: bold;
}

.markdown h1:first-child {
  font-size: 2.5rem !important;
}

/* this is for breadcrumbs, except the current page (far right) */
/* the current page is the `--active` one next */
.breadcrumbs__link  {
  color: var(--clickhouse-breadcrumb-link-color);
  background-color: transparent;
  font-size: 0.8rem;
}

.breadcrumbs__text--active  {
  color: #FF0000;
  font-size: 0.8rem;
}

/* this is the far right crumb */
.breadcrumbs__item--active {
  border-radius: var(--ifm-breadcrumb-border-radius);
  background: white;
  font-size: 0.8rem;
}

/* this is the background rectangle behind the crumb */
/* not used at the moment
.breadcrumbs__item  {
  color: #FF0000;
  background-color: #FF0000;
  font-size: 0.8rem;
}
/* ... */

